https://github.com/LIKITHACHOWDARY/HospitalManagement.git

--- a/src/main/webapp/BookappointmentbyID.html
+++ b/src/main/webapp/BookappointmentbyID.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div style="margin-left: 350px;margin-top: 150px;">
 	<h2>Book Appointment By ID</h2>
 	<form action="BookbyID.jsp" method="post">
 		Enter ID: <input type="text" name="id"><br>
@@ -18,6 +19,6 @@
 	<a href="Appointment.jsp"><button>Back</button></a>
 
 
-
+</div>
 </body>
 </html>
