--- a/src/main/webapp/Doctorhome.html
+++ b/src/main/webapp/Doctorhome.html
@@ -5,12 +5,32 @@
 <title>Doctor Home</title>
 </head>
 <body>
-<h1>Welcome to Doctor Home Page Select one</h1>
-	<a href="changedoctoravailablity"><button>ChangeAvailablity</button></a>
-	<br><br>
-	<a href="UpcommingAppointments.jsp"><button>See Upcoming Appointment</button></a><br><br>
-	<a href="DoctorAllAppointments.jsp"><button>All Appointments</button></a><br><br>
-	
-	<a href="logout"><button>Logout</button></a><br><br>
+	<div style="margin-left: 350px; margin-top: 150px;">
+		<h1 style="margin-left: 80px">Welcome to Doctor Home Page Select
+			one</h1>
+
+
+		<img alt="ChangeAvailablity" src="upcommingappointments.jpg"
+			height="100px" width="100px"
+			style="border-radius: 20px; margin-left: 10px"> 
+	   <img alt="See Upcoming Appointment" src="availability.jpg" height="100px"
+			width="100px" style="border-radius: 50px; margin-left: 100px;">
+		<img alt="All Appointments" src="appointments.jpg" height="100px"
+			width="100px" style="border-radius: 50px; margin-left: 100px;">
+		<img alt="Logout" src="logout.jpg" height="100px" width="100px"
+			style="border-radius: 50px; margin-left: 100px;"><br>	<br>
+			
+	 <a href="changedoctoravailablity"><button
+				style="background-color: aqua; border-radius: 50px;">ChangeAvailablity</button></a>
+		<a href="UpcommingAppointments.jsp"><button
+				style="background-color: aqua; border-radius: 50px; margin-left: 50px;">See
+				Upcoming Appointment</button></a>
+		 <a href="DoctorAllAppointments.jsp"><button
+				style="background-color: aqua; border-radius: 50px; margin-left: 50px;">All
+				Appointments</button></a>
+		 <a href="logout"><button
+				style="background-color: aqua; border-radius: 50px; margin-left: 115px;">Logout</button></a>
+
+	</div>
 </body>
 </html>
