--- a/src/main/webapp/Enterpatientid.html
+++ b/src/main/webapp/Enterpatientid.html
@@ -5,12 +5,14 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div style="margin-left: 350px;margin-top: 150px;">
+<h1>Enter Id to be edited</h1>
 	<form action="EditPatient.jsp">
 		Enter Id:<input type="number" name="id">
 		<button>Edit</button>
 	</form>
 	<br>
 	<a href="StaffHome.html"><button>Back</button></a>
-
+</div>
 </body>
 </html>
