--- a/src/main/webapp/SelectRole.html
+++ b/src/main/webapp/SelectRole.html
@@ -5,32 +5,30 @@
 <title>Insert title here</title>
 </head>
 <body
-	style="background-image: url('https://tse4.mm.bing.net/th?id=OIP.6ROIccGsIjVxqj8sS_JQJgHaD-&amp;pid=Api&amp;P=0&amp;h=180'); background-repeat: no-repeat; background-size: cover">
+	style="background-image: url('home_healthcare_web1.jpg'); background-repeat: no-repeat; background-size: cover;">
 	<center style="margin-top: 200px">
-		<h1>Select Type Of Account</h1>
+		<h1 style="color: red;">Select Type Of Account</h1>
 	</center>
 	<form action="selectrole" method="post">
 		<fieldset style="width: 150px; margin-left: 470px;">
-
 			<table>
-
 				<tr>
-					<td><input type="radio" name="role" value="staff" required>Staff
-					</td>
-					<td><input type="radio" name="role" value="doctor">Doctor
-					</td>
-
+					<td style="color: blue;"><input type="radio" name="role"
+						value="staff" required>Staff</td>
+					<td style="color: blue;"><input type="radio" name="role"
+						value="doctor">Doctor</td>
 				</tr>
 				<tr>
-					<td><button>Submit</button></td>
-					<td><button>Cancel</button></td>
-
+					<td><button
+							style="border-radius: 20px; background-color: pink;">Submit</button></td>
+					<td><button
+							style="border-radius: 20px; background-color: pink;">Cancel</button></td>
 				</tr>
 			</table>
 		</fieldset>
 	</form>
-	<a href="Login.html" style="margin-left: 470px; top: 100px"><button>Back</button></a>
+	<br>
+	<a href="Login.html" style="margin-left: 470px; top: 100px;"><button
+			style="border-radius: 20px; background-color: pink;">Back</button></a>
 </body>
 </html>
-
-
