--- a/src/main/webapp/StaffHome.html
+++ b/src/main/webapp/StaffHome.html
@@ -5,6 +5,7 @@
 <title>Staff Home</title>
 </head>
 <body>
+<div style="margin-left: 350px;margin-top: 150px;">
 	<h1>Welcome to Staff Home Page Select one</h1>
 	<br>
 	<a href="Addpatient.html"><button>Add Patient</button></a>
@@ -21,5 +22,6 @@
 	<br>
 	
 	<a href="logout"><button>Logout</button></a><br><br>
+	</div>
 </body>
 </html>
