--- a/src/main/webapp/Addpatient.html
+++ b/src/main/webapp/Addpatient.html
@@ -6,38 +6,36 @@
 <link href="AddPatient.css">
 </head>
 <body>
-
-	<h1>Add Patient Details</h1>
-	<form action="patient" method="post" enctype="multipart/form-data">
-		<table>
-			<tr>
-				<td><label for="name">Name</label></td>
-				<td><input id="name" type="text" name="name"></td>
-			<tr>
-				<td><label for="mobile">Mobile</label></td>
-				<td><input id="mobile" type="tel" pattern="{0-9}[10]"
-					name="mobile"></td>
-			</tr>
-
-			<tr>
-				<td><label for="dob">Dob</label></td>
-				<td><input id="dob" type="date" name="dob"></td>
-			</tr>
-
-			<tr>
-				<td><label for="picture">Picture</label></td>
-				<td><input id="picture" type="file" name="picture"></td>
-			</tr>
-
-			<tr>
-				<td><button>Add</button></td>
-				<td><button type="reset">Cancel</button></td>
-			</tr>
-
-		</table>
-		<br>
-	
-	</form>
-		<a href="StaffHome.html"><button>Back</button></a>
+	<div align="center" style="margin-top: 200px">
+		<h1>Add Patient Details</h1>
+		<form action="patient" method="post" enctype="multipart/form-data">
+			<table>
+				<tr>
+					<td><label for="name">Name</label></td>
+					<td><input id="name" type="text" name="name"></td>
+				<tr>
+					<td><label for="mobile">Mobile</label></td>
+					<td><input id="mobile" type="tel" pattern="{0-9}[10]"
+						name="mobile"></td>
+				</tr>
+				<tr>
+					<td><label for="dob">Dob</label></td>
+					<td><input id="dob" type="date" name="dob"></td>
+				</tr>
+				<tr>
+					<td><label for="picture">Picture</label></td>
+					<td><input id="picture" type="file" name="picture"></td>
+				</tr>
+				<tr>
+					<td><button style="border-radius: 50px">Add</button></td>
+					<td><button type="reset"
+							style="border-radius: 50px; margin-left: 120px">Cancel</button></td>
+				</tr>
+			</table>
+			<br>
+		</form>
+		<a href="StaffHome.html"><button
+				style="border-radius: 50px; margin-left: -260px">Back</button></a>
+	</div>
 </body>
 </html>
