--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -7,34 +7,41 @@
 <body
 	style="background-image: url('https://tse1.mm.bing.net/th?id=OIP.cOuxK6LyrAQazIArd1yhSAHaDo&amp;pid=Api&amp;P=0&amp;h=180'); margin-top: 200px; background-repeat: no-repeat; background-size: cover">
 	<center>
-	<h1>Welcome to Vishnu Multispecalist Hospital</h1>
-		<h1>Enter Details Login</h1>
+		<h1 style="color: red;">Welcome to Vishnu Multispecalist Hospital</h1>
+		<h1 style="color: red;">Enter Details Login</h1>
 		<form action="login" method="post">
-			<table>
-				<tr>
-					<td><label for="id">ID:</label></td>
-					<td><input type="text" name="id"></td>
-				</tr>
-				<tr>
-					<td><label for="password">Password:</label></td>
-					<td><input type="password" name="password"></td>
-				</tr>
-				<tr>
-					<td><button type="reset">Cancel</button></td>
-					<td><button>Login</button></td>
+			<fieldset style="width: 330px;">
 
-				</tr>
 
-			</table>
+				<table>
+					<tr>
+						<td><label for="id">ID:</label></td>
+						<td><input type="text" name="id"></td>
+					</tr>
+					<tr>
+						<td><label for="password">Password:</label></td>
+						<td><input type="password" name="password"></td>
+					</tr>
+					<tr>
+						<td><button type="reset"
+								style="background-color: aqua; border-radius: 20px;">Cancel</button></td>
+						<td><button
+								style="background-color: aqua; border-radius: 20px;">Login</button></td>
+					</tr>
+				</table>
+			</fieldset>
 		</form>
+		<br> <br>
 	</center>
-	<a href="ForgetPassword.html" style="margin-left: 500px;">Forgot
+	<a href="ForgetPassword.html" style="margin-left: 500px; color: black;">Forgot
 		password</a>
 	<br>
 	<br>
-	<a href="SelectRole.html" style="margin-left: 500px;"><button>Click
+	<a href="SelectRole.html" style="margin-left: 500px;"><button
+			style="background-color: pink; border-radius: 20px;">Click
 			Here To Create New Account</button></a>
-	<a href="Home.html"><button>Home</button></a>
+	<a href="Home.html"><button
+			style="background-color: pink; border-radius: 20px;">Home</button></a>
 
 </body>
 </html>
